count methods added