@@ -19,7 +19,6 @@ import source_files.services.userServices.abstracts.CustomerService;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static source_files.data.enums.defaultDataEnums.Status.DefaultUserStatus.PENDING_VERIFYING;
 
@@ -27,7 +26,7 @@ import static source_files.data.enums.defaultDataEnums.Status.DefaultUserStatus.
 @RequiredArgsConstructor
 public class CustomerManager implements CustomerService {
 
-    private final ModelMapperService modelMapperService;
+    private final ModelMapperService mapper;
     private final CustomerRepository customerRepository;
     private final CustomerBusinessRules rules;
     private final CustomerEntityService entityService;
@@ -37,7 +36,7 @@ public class CustomerManager implements CustomerService {
     @Override
     public void create(CreateCustomerRequest createCustomerRequest) {
         try {
-            CustomerEntity customerEntity = modelMapperService.forRequest()
+            CustomerEntity customerEntity = mapper.forRequest()
                     .map(rules.checkCreateCustomerRequest(
                             rules.fixCreateCustomerRequest(createCustomerRequest)), CustomerEntity.class
                     );
@@ -59,38 +58,37 @@ public class CustomerManager implements CustomerService {
         if (userImage.getId() != updateCustomerRequest.getUserImageEntityId()) {
             userImageService.delete(userImage.getId());
         }
-        customerEntity = modelMapperService.forRequest()
+        customerEntity = mapper.forRequest()
                 .map(rules.checkUpdateCustomerRequest(
                         rules.fixUpdateCustomerRequest(updateCustomerRequest)), CustomerEntity.class
                 );
 
-        return modelMapperService.forResponse().map(entityService.create(customerEntity), CustomerDTO.class);
+        return mapper.forResponse().map(entityService.create(customerEntity), CustomerDTO.class);
     }
 
     @Override
     public CustomerDTO getById(int id) {
-        return modelMapperService.forResponse().map(entityService.getById(id), CustomerDTO.class);
+        return maptoDto(entityService.getById(id));
 
     }
 
     @Override
     public CustomerDTO getByEmailAddress(String emailAddress) {
-        return modelMapperService.forResponse()
-                .map(entityService.getByEmailAddress(emailAddress), CustomerDTO.class);
+        return maptoDto(entityService.getByEmailAddress(emailAddress));
     }
 
     @Override
     public List<CustomerDTO> getAll() {
-        return rules.checkDataList(entityService.getAll())
-                .stream().map(customer -> modelMapperService.forResponse()
-                        .map(customer, CustomerDTO.class)).collect(Collectors.toList());
+        List<CustomerDTO> customers = entityService.getAll().stream().map(this::maptoDto).toList();
+        rules.checkDataList(customers);
+        return customers;
     }
 
     @Override
     public List<CustomerDTO> getAllByDeletedState(boolean isDeleted) {
-        return rules.checkDataList(entityService.getAllByDeletedState(isDeleted))
-                .stream().map(customerEntity -> modelMapperService.forResponse()
-                        .map(customerEntity, CustomerDTO.class)).toList();
+        List<CustomerDTO> customers = entityService.getAllByDeletedState(isDeleted).stream().map(this::maptoDto).toList();
+        rules.checkDataList(customers);
+        return customers;
     }
 
     @Override
@@ -122,7 +120,7 @@ public class CustomerManager implements CustomerService {
     @Override
     public List<RentalDTO> getRentalHistory(int customerId) {
         CustomerEntity customerEntity = entityService.getById(customerId);
-        return customerEntity.getRentalHistory().stream().map(rentalEntity -> modelMapperService.forResponse()
+        return customerEntity.getRentalHistory().stream().map(rentalEntity -> mapper.forResponse()
                 .map(rentalEntity, RentalDTO.class)).toList();
     }
 
@@ -132,6 +130,23 @@ public class CustomerManager implements CustomerService {
         customerEntity.setIsDeleted(true);
         customerEntity.setDeletedAt(LocalDateTime.now());
         customerRepository.save(customerEntity);
+    }
+
+    @Override
+    public int getCountByDeletedState(boolean isDeleted) {
+        return entityService.getCountByDeletedState(isDeleted);
+    }
+
+    @Override
+    public int getCountByStatus(String status) {
+        return entityService.getCountByStatus(status.trim().toUpperCase());
+    }
+
+    private CustomerDTO maptoDto(CustomerEntity customerEntity) {
+        CustomerDTO customerDTO = mapper.forResponse().map(customerEntity, CustomerDTO.class);
+        customerDTO.setStatus(customerEntity.getStatus().getLabel());
+        customerDTO.setAuthority(customerEntity.getAuthority().getLabel());
+        return customerDTO;
     }
 
 }
